--- a/src/pages/visualization-card/visualization-card.html
+++ b/src/pages/visualization-card/visualization-card.html
@@ -1,7 +1,7 @@
 <ion-grid>
   <ion-card>
     <ion-card-content>
-      <div *ngIf="options.title" style="min-height: 400px;">
+      <div *ngIf="options.title" style="min-height : 200px;max-height: 400px;overflow:auto">
         <div *ngIf="dashBoard.selected !='table'">
           <ion-row>
             <ion-col width-90>
