remove additional old components and services as well as adding loading icons oon loading data for a given visualization card

--- a/src/pages/dash-board-home/dash-board-home.html
+++ b/src/pages/dash-board-home/dash-board-home.html
@@ -27,9 +27,9 @@
     </ion-row>
     <div class="dashHeaderSeparator"></div>
 
-    <div *ngIf="loadingData">
+    <div *ngIf="loadingData" class="loadingMessage">
 
-      <ion-list>
+      <ion-list >
         <ion-item >
           <div style="text-align: center" item-left >
             <div *ngIf="dashBoardProgressTracker.isDashBoardsLoaded">
@@ -43,7 +43,6 @@
             Loading DashBoards
           </span>
         </ion-item>
-
         <ion-item >
           <div style="text-align: center" item-left >
             <div *ngIf="dashBoardProgressTracker.isDashBoardItemObjectsAndDataLoaded">
@@ -57,34 +56,6 @@
             Loading Visualization metadata
           </span>
         </ion-item>
-
-        <!--<ion-item >-->
-          <!--<div style="text-align: center" item-left >-->
-            <!--<div *ngIf="dashBoardProgressTracker.isisVisualizationDataLoaded">-->
-              <!--<ion-icon name="done-all" color="primary"></ion-icon>-->
-            <!--</div>-->
-            <!--<div *ngIf="!dashBoardProgressTracker.isisVisualizationDataLoaded">-->
-              <!--<ion-spinner name="crescent" color="secondary"></ion-spinner>-->
-            <!--</div>-->
-          <!--</div>-->
-          <!--<span [color]="(dashBoardProgressTracker.currentStep == 'visualizationData')?'current' : 'font-color'" >-->
-            <!--Loading Visualization Data-->
-          <!--</span>-->
-        <!--</ion-item>-->
-
-        <!--<ion-item >-->
-          <!--<div style="text-align: center" item-left >-->
-            <!--<div *ngIf="dashBoardProgressTracker.isDashBoardsLoaded">-->
-              <!--<ion-icon name="done-all" color="primary"></ion-icon>-->
-            <!--</div>-->
-            <!--<div *ngIf="dashBoardProgressTracker.isDashBoardsLoaded">-->
-              <!--<ion-spinner name="crescent" color="secondary"></ion-spinner>-->
-            <!--</div>-->
-          <!--</div>-->
-          <!--<span [color]="(dashBoardProgressTracker.currentStep == 'dashBoards')?'current' : 'font-color'" >-->
-            <!--Loading DashBoards-->
-          <!--</span>-->
-        <!--</ion-item>-->
       </ion-list>
     </div>
     <div *ngIf="!loadingData">
@@ -103,7 +74,7 @@
                     <ion-icon [color]="(selectedDashBoardItemId == dashboardItem.id) ?'current' : 'font-color'"  name="ios-arrow-forward" *ngIf="selectedDashBoardItemId != dashboardItem.id" item-right></ion-icon>
                     <ion-icon [color]="(selectedDashBoardItemId == dashboardItem.id) ?'current' : 'font-color'"  name="ios-arrow-down" *ngIf="selectedDashBoardItemId == dashboardItem.id" item-right></ion-icon>
                   </ion-item>
-                  <!--<div class="visualizerHeaderSeparator"></div>-->
+                  <div class="visualizerHeaderSeparator"></div>
                   <div *ngIf="selectedDashBoardItemId == dashboardItem.id">
                     <page-visualization-card [dashboardItem] ="dashboardItem" ></page-visualization-card>
                   </div>
@@ -114,42 +85,5 @@
         </div>
       </div>
     </div>
-
   </ion-grid>
-
-  <!--<div *ngIf="loadingData">-->
-    <!--<ion-list>-->
-      <!--<ion-item *ngFor="let message of loadingMessages; let currentIndex = index">-->
-        <!--{{ message }}-->
-        <!--<ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right color="primary"></ion-icon>-->
-        <!--<div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">-->
-          <!--<ion-spinner name="crescent" color="secondary"></ion-spinner>-->
-        <!--</div>-->
-      <!--</ion-item>-->
-    <!--</ion-list>-->
-  <!--</div>-->
-
-  <!--<div *ngIf="!loadingData">-->
-    <!--<div *ngIf="dashBoards">-->
-      <!--<ion-searchbar animated="true" (ionInput)="getFilteredList($event)"></ion-searchbar>-->
-      <!--<ion-grid>-->
-        <!--<ion-row>-->
-          <!--<ion-col width="100">-->
-            <!--<ion-list>-->
-              <!--<div *ngFor="let dashBoard of dashBoards">-->
-                <!--<ion-item *ngIf="dashBoard.dashboardItems.length > 0"  (click)="goToDashBoard(dashBoard)">-->
-                  <!--<ion-icon name="list" item-left color="favorite"></ion-icon>-->
-                  <!--<span >{{ dashBoard.name }}</span>-->
-                  <!--<ion-icon name="arrow-forward" item-right color="primary"></ion-icon>-->
-                <!--</ion-item>-->
-              <!--</div>-->
-              <!--<ion-item *ngIf = "dashBoards.length == 0">-->
-                <!--There is no dashBoard from the server-->
-              <!--</ion-item>-->
-            <!--</ion-list>-->
-          <!--</ion-col>-->
-        <!--</ion-row>-->
-      <!--</ion-grid>-->
-    <!--</div>-->
-  <!--</div>-->
 </ion-content>
