adding refresh on faito loading datashboards

--- a/src/pages/dash-board-home/dash-board-home.html
+++ b/src/pages/dash-board-home/dash-board-home.html
@@ -26,6 +26,15 @@
       </ion-col>
     </ion-row>
     <div class="dashHeaderSeparator"></div>
+    <div *ngIf="!loadingData ">
+      <div *ngIf="dashBoards.length == 0 ||dashBoards.length > 0 && !dashBoardProgressTracker.dashBoardItemObjectsAndData[selectedDashBoardId]">
+        <div class="refreshPanel">
+          <button (click)="getAllDataBase()" ion-button clear large full text-capitalize class="normalButton">
+            <ion-icon name="refresh"></ion-icon>
+          </button>
+        </div>
+      </div>
+    </div>
 
     <div *ngIf="loadingData" class="loadingMessage">
 
