--- a/src/pages/launcher/launcher.html
+++ b/src/pages/launcher/launcher.html
@@ -18,19 +18,8 @@
         <p >Routine and survey data on your pocket</p>
       </ion-col>
     </ion-row>
-
   </ion-grid>
 
-  <div *ngIf="loadingData">
-    <ion-list>
-      <ion-item *ngFor="let message of loadingMessages; let currentIndex = index">
-        {{ message }}
-        <ion-icon *ngIf="(currentIndex + 1) < loadingMessages.length" name="done-all" item-right color="primary"></ion-icon>
-        <div style="text-align: center" item-right *ngIf="(currentIndex + 1) >= loadingMessages.length">
-          <ion-spinner name="crescent" color="secondary"></ion-spinner>
-        </div>
-      </ion-item>
-    </ion-list>
-  </div>
+  <page-loading loadingSize="large"></page-loading>
 
 </ion-content>
